--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   "dependencies": {
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.34.1",
+    "shopify-buy": "^2.11.0"
   },
   "devDependencies": {
+    "@types/node": "^15.12.0",
     "@types/react": "17.0.9",
-    "typescript": "4.3.2"
+    "@types/shopify-buy": "^2.10.5",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.4",
+    "typescript": "4.3.2",
+    "typescript-plugin-css-modules": "^3.3.0"
   }
 }
